[tool.poetry]
name = "yellows"
version = "2.0.0"
description = ""
authors = ["Nick Hollett <niax@niax.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.27.0"
Authlib = "^1.0.1"
boto3 = "^1.24.66"
boto3-stubs = {extras = ["dynamodb", "secretsmanager", "s3"], version = "^1.24.70"}
typing-extensions = "^4.3.0"
dynamodb-json = "^1.3"
aws-encryption-sdk = "^3.1.1"
pynamodb = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
